bird-app-infra/kubernetes/bird-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bird-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bird-api
  template:
    metadata:
      labels:
        app: bird-api
    spec:
      containers:
        - name: bird-api
          image: lilithvengeance/bird-api:latest
          ports:
            - containerPort: 4201
          readinessProbe:
            httpGet:
              path: /health
              port: 4201
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 4201
            initialDelaySeconds: 15
            periodSeconds: 10
          resources:
            limits:
              cpu: "0.5"
              memory: "256Mi"
            requests:
              cpu: "0.2"
              memory: "128Mi"
