bird-app-infra/kubernetes/bird-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bird-api
spec:
  selector:
    app: bird-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4201
  type: ClusterIP # Changed from LoadBalancer to ClusterIP
