bird-app-infra/kubernetes/bird-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bird-api-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - path: /api/birds
            pathType: Prefix
            backend:
              service:
                name: bird-api
                port:
                  number: 80
